mergeJson task now automatically registers itself with assemble, and optionally the protobuf generation tasks